[package]
name = "edr_eth"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.4", default-features = false, features = ["rand", "rlp"] }
alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
futures = {version = "0.3.28", default-features = false}
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hyper = {version = "0.14.27", default-features = false}
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8",] }
log = { version = "0.4.17", default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }
# We need the git versions pending the release of `RetryableStrategy`
# https://github.com/TrueLayer/reqwest-middleware/blob/main/reqwest-retry/CHANGELOG.md#unreleased
reqwest-middleware = { git = "https://github.com/TrueLayer/reqwest-middleware", rev = "a54319a", default-features = false }
reqwest-retry = { git = "https://github.com/TrueLayer/reqwest-middleware", rev = "a54319a", default-features = false }
revm-primitives = { git = "https://github.com/Wodann/revm", rev = "d6fea43", version = "1.3", default-features = false }
# revm-primitives = { path = "../../../revm/crates/primitives", version = "1.3", default-features = false }
serde = { version = "1.0.147", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0.89", optional = true }
sha3 = { version = "0.10.8", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["fs", "sync"] }
triehash = { version = "0.8.4", default-features = false }
uuid = { version = "1.4.1", default-features = false, features = ["v4"]}

[dev-dependencies]
anyhow = "1.0.75"
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
mockito = { version = "1.0.2", default-features = false }
paste = { version = "1.0.14", default-features = false }
edr_test_utils = { version = "0.2.0-dev", path = "../edr_test_utils" }
serial_test = "2.0.0"
tempfile = { version = "3.7.1", default-features = false }
tokio = { version = "1.23.0", features = ["macros"] }
walkdir = { version = "2.3.3", default-features =  false }

[features]
default = ["std"]
serde = ["dep:serde", "alloy-primitives/serde", "revm-primitives/serde", "serde_json"]
std = ["alloy-primitives/std", "futures/std", "hash256-std-hasher/std", "hash-db/std", "hex/std", "itertools/use_std", "k256/std", "k256/precomputed-tables", "revm-primitives/std", "serde?/std", "sha3/std", "triehash/std", "uuid/std"]
test-remote = ["serde"]
