[lib]
bench = false

[package]
name = "edr_evm"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
async-rwlock = { version = "1.3.0", default-features = false }
auto_impl = { version = "1.0.1", default-features = false }
cita_trie = { git = "https://github.com/Wodann/cita-trie", rev = "60efef5", version = "4.0.0", default-features = false }
dyn-clone = { version = "1.0.13", default-features = false }
futures = { version = "0.3.28", features = ["alloc", "async-await", "executor", "std"] }
hasher = { git = "https://github.com/Wodann/hasher", rev = "89d3fc9", version = "0.1.4", default-features = false, features = ["hash-keccak"] }
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc", "use_std"] }
log = { version = "0.4.17", default-features = false }
once_cell = { version = "1.18.0", default-features = false, features = ["alloc", "race", "std"] }
parking_lot = { version = "0.12.1", default-features = false }
edr_defaults = { version = "0.2.0-dev", path = "../edr_defaults" }
edr_eth = { version = "0.2.0-dev", path = "../edr_eth", features = ["serde"] }
revm = { version = "6.1", default-features = false, features = ["dev", "serde", "std"] }
serde = { version = "1.0.158", default-features = false, features = ["std"] }
serde_json = { version = "1.0.94", default-features = false, features = ["std"] }
thiserror = { version = "1.0.38", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.37", features = ["attributes", "std"], optional = true }

[dev-dependencies]
anyhow = "1.0.75"
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support", "html_reports", "plotters"] }
edr_test_utils = { version = "0.2.0-dev", path = "../edr_test_utils" }
lazy_static = "1.4.0"
paste = { version = "1.0.14", default-features = false }
serial_test = "2.0.0"
tempfile = "3.7.1"

[features]
bench-once = []           # limits the benchmark variants to one
test-remote = []
test-utils = []
tracing = ["dep:tracing", "edr_eth/tracing"]

[[bench]]
name = "database_commit"
path = "benches/state/database_commit.rs"
harness = false

[[bench]]
name = "state_clone"
path = "benches/state/state_clone.rs"
harness = false

[[bench]]
name = "state_debug"
path = "benches/state/state_debug.rs"
harness = false

[[bench]]
name = "state_ref"
path = "benches/state/state_ref.rs"
harness = false
