[package]
name = "edr_provider"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
alloy-sol-types = { version = "0.5.1", default-features = false, features = ["std"]}
dyn-clone = { version = "1.0.13", default-features = false }
edr_defaults = { version = "0.2.0-dev", path = "../edr_defaults" }
edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
edr_evm = { version = "0.2.0-dev", path = "../edr_evm" }
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "std"] }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.20", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }
sha3 = { version = "0.10.6", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }

[dev-dependencies]
anyhow = "1.0.75"
edr_test_utils = { version = "0.2.0-dev", path = "../edr_test_utils" }
paste = { version = "1.0.14", default-features = false }
tempfile = "3.7.1"

[build-dependencies]
cargo_toml = { version = "0.15.3", default-features = false }
toml = { version = "0.5.9", default-features = false }
