[package]
name = "edr_provider"
version = "0.3.5"
edition = "2021"

[dependencies]
alloy-sol-types = { version = "0.5.1", default-features = false, features = ["std"] }
anyhow = { version = "1.0.75", optional = true }
dyn-clone = { version = "1.0.13", default-features = false }
edr_defaults = { version = "0.3.5", path = "../edr_defaults" }
edr_eth = { version = "0.3.5", path = "../edr_eth", features = ["rand"] }
edr_evm = { version = "0.3.5", path = "../edr_evm", features = ["tracing"] }
ethers-core = {  version = "2.0.12" , features = ["eip712"] }
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"] }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "pem", "pkcs8", "precomputed-tables", "std"] }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.20", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
rpds = { version = "1.1.0", default-features = false, features = ["std"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }
sha3 = { version = "0.10.6", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
tracing = { version = "0.1.37", features = ["attributes", "std"], optional = true }
lru = "0.12.2"

[dev-dependencies]
anyhow = "1.0.75"
edr_test_utils = { version = "0.3.5", path = "../edr_test_utils" }
paste = { version = "1.0.14", default-features = false }
serial_test = "2.0.0"
tempfile = "3.7.1"

[build-dependencies]
cargo_toml = { version = "0.15.3", default-features = false }
toml = { version = "0.5.9", default-features = false }

[features]
test-utils = ["anyhow"]
tracing = ["dep:tracing", "edr_eth/tracing", "edr_evm/tracing"]
