[package]
name = "edr_rpc_hardhat"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
edr_eth = { version = "0.2.0-dev", path = "../edr_eth", features = ["serde"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }

[dev-dependencies]
anyhow = "1.0.75"
edr_test_utils = { version = "0.2.0-dev", path = "../edr_test_utils" }
tempfile = "3.7.1"
