[package]
name = "rethnet"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", default-features = false, features = ["std", "derive"] }
pretty_env_logger = { version = "0.4.0", default-features = false }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
