[package]
name = "rethnet_evm_napi"
version = "0.1.0-dev"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = { version = "0.5.6", default-features = false }
napi = { version = "= 2.11.1", default-features = false, features = ["async", "error_anyhow", "napi8", "serde-json"] }
napi-derive = "2.9.3"
once_cell = "1.15.0"
pretty_env_logger = "0.4.0"
rethnet_evm = { version = "0.1.0-dev", path = "../rethnet_evm" }
rethnet_eth = { version = "0.1.0-dev", path = "../rethnet_eth" }
secp256k1 = { version = "0.24.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"] }

[build-dependencies]
napi-build = "2.0.1"
