[package]
name = "rethnet_evm_napi"
version = "0.1.0-dev"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { version = "0.1.73", default-features = false }
crossbeam-channel = { version = "0.5.6", default-features = false }
# when napi is pinned, be sure to pin napi-derive to the same version
# The `async` feature ensures that a tokio runtime is available
napi = { version = "2.12.4", default-features = false, features = ["async", "error_anyhow", "napi8", "serde-json"] }
napi-derive = "2.12.3"
rethnet = { version = "0.1.0-dev", path = "../rethnet" }
rethnet_defaults = { version = "0.1.0-dev", path = "../rethnet_defaults" }
rethnet_evm = { version = "0.1.0-dev", path = "../rethnet_evm" }
rethnet_eth = { version = "0.1.0-dev", path = "../rethnet_eth" }
secp256k1 = { version = "0.24.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
tracing-flame = { version = "0.2.0", default-features = false, features = ["smallvec"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec", "std"] }
parking_lot = { version = "0.12.1", default-features = false }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[features]
tracing = ["rethnet_evm/tracing"]

[profile.release]
lto = true
