[package]
name = "rethnet_rpc_server"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
axum = "0.6.18"
hashbrown = { version = "0.13", default-features = false, features = ["ahash"] }
hyper = "0.14.26"
rethnet_eth = { version = "0.1.0-dev", path = "../rethnet_eth", features = ["serde"] }
rethnet_evm = { version = "0.1.0-dev", path = "../rethnet_evm" }
rethnet_evm_napi = { version = "0.1.0-dev", path = "../rethnet_evm_napi" }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }

[dev-dependencies]
bytes = { version = "1.2.1", default-features = false }
