[package]
name = "rpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.17"
jsonrpc-types = "0.3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.148"
serde_json = "1.0.89"
thiserror = "1.0.37"
