[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75" }
cfg-if = "1.0.0"
clap = { version = "3.2.20", features = ["derive"] }
difference = { version = "2.0.0", default-features = false }
edr_defaults = { version = "0.2.0-dev", path = "../edr_defaults" }
edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
edr_evm = { version = "0.2.0-dev", path = "../edr_evm", features = ["tracing"] }
edr_provider = { version = "0.2.0-dev", path = "../edr_provider", features = ["test-utils"] }
flate2 = "1.0.28"
indicatif = { version = "0.17.7", features = ["rayon"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
tempfile = "3.7.1"
tokio = "1.33.0"
toml = { version = "0.5.9", default-features = false }
walkdir = { version = "2.4.0", features = [] }
