[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75" }
cfg-if = "1.0.0"
clap = { version = "3.2.20", features = ["derive"] }
difference = { version = "2.0.0", default-features = false }
edr_defaults = { version = "0.3.5", path = "../edr_defaults" }
edr_eth = { version = "0.3.5", path = "../edr_eth" }
edr_evm = { version = "0.3.5", path = "../edr_evm", features = ["tracing"] }
edr_provider = { version = "0.3.5", path = "../edr_provider", features = ["test-utils"] }
flate2 = "1.0.28"
indicatif = { version = "0.17.7", features = ["rayon"] }
mimalloc = { version = "0.1.39", default-features = false }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
tempfile = "3.7.1"
tokio = "1.33.0"
tracing = { version = "0.1.37", features = ["attributes", "std"], optional = true }
tracing-flame = { version = "0.2.0", default-features = false, features = ["smallvec"], optional = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec", "std"], optional = true }
toml = { version = "0.5.9", default-features = false }
walkdir = { version = "2.4.0", features = [] }

[features]
tracing = ["dep:tracing", "dep:tracing-flame", "dep:tracing-subscriber", "edr_eth/tracing", "edr_evm/tracing", "edr_provider/tracing"]
